--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <a href="Personal Site/index.html">Project 1 - Personal Site</a>
   <a href="Digital Business Card/index.html">Project 2 - Business Card</a>
+  <a href="SoloProject2/index.html">Solo Project 2 - Amazon Product Page</a>
   
 </body>
 </html>
