solo project 3 complete

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <a href="Personal Site/index.html">Project 1 - Personal Site</a>
   <a href="Digital Business Card/index.html">Project 2 - Business Card</a>
   <a href="SoloProject2/index.html">Solo Project 2 - Amazon Product Page</a>
+  <a href="SoloProject3/index.html">Solo Project 3 - Web Agency Hero</a>
   
 </body>
 </html>
