adding birthday card site

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <a href="Digital Business Card/index.html">Project 2 - Business Card</a>
   <a href="SoloProject2/index.html">Solo Project 2 - Amazon Product Page</a>
   <a href="SoloProject3/index.html">Solo Project 3 - Web Agency Hero</a>
+  <a href="BirthdayCard/index.html">Birthday Card</a>
   
 </body>
 </html>
