--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <a href="SoloProject2/index.html">Solo Project 2 - Amazon Product Page</a>
   <a href="SoloProject3/index.html">Solo Project 3 - Web Agency Hero</a>
   <a href="BirthdayCard/index.html">Birthday Card</a>
+  <a href="SoloProject_Hometown/index.html">HomeTown Hero Site</a>
   
 </body>
 </html>
