fixed flexbox in business card on hometown hero project

--- a/SoloProject_Hometown/index.html
+++ b/SoloProject_Hometown/index.html
@@ -44,7 +44,7 @@
   <div class="business-card">
     <div class="card">
       <img class="avatar" src="images/IanSmall.jpeg">
-      <div >
+      <div class="card-info">
           <h3>Ian Frye</h3>
           <p>Frontend Developer</p>
           <h4>Winston Salem, NC</h4>
