fixed spacing on hometown

--- a/SoloProject_Hometown/index.html
+++ b/SoloProject_Hometown/index.html
@@ -21,21 +21,21 @@
     <h2>Top activities to do in Winston Salem</h2>
     <div class="activity-wrapper">
       
-      <div class="activity">
-        <a href=" https://www.tripadvisor.com/Attraction_Review-g49680-d9858876-Reviews-Salem_Lake-Winston_Salem_North_Carolina.html" target="_blank"><img class="activity-img" src="images/salem-lake.jpeg" alt="lake with beautiful trees displaying fall colors" /></a>
-        <h4 class="activity-title">Salem Lake</h4>
+      <div class="activity first-title">
+        <img class="activity-img" src="images/salem-lake.jpeg" alt="lake with beautiful trees displaying fall colors" />
+        <a href=" https://www.tripadvisor.com/Attraction_Review-g49680-d9858876-Reviews-Salem_Lake-Winston_Salem_North_Carolina.html" target="_blank"><h4 class="activity-title">Salem Lake</h4></a>
         <p class="activity-text" id="change-this">Beauiful local lake with a 9 mile trail that is great for walking, running or biking!</p>
       </div>
 
       <div class="activity">
-        <a href="https://www.tripadvisor.com/Attraction_Review-g49680-d3609644-Reviews-Truist_Field-Winston_Salem_North_Carolina.html" target="_blank"><img class="activity-img" src="images/wake-forest.jpeg" alt="wake forest truist stadium" /></a>
-        <h4 class="activity-title">Wake Forest Universtiy Football</h4>
+        <img class="activity-img" src="images/wake-forest.jpeg" alt="wake forest truist stadium" />
+        <a href="https://www.tripadvisor.com/Attraction_Review-g49680-d3609644-Reviews-Truist_Field-Winston_Salem_North_Carolina.html" target="_blank"><h4 class="activity-title">Wake Forest Universtiy Football</h4></a>
         <p class="activity-text">Visit Truist Stadium to see your favorite football team take the field!</p>
       </div>
 
       <div class="activity">
-        <a href="https://www.tripadvisor.com/AttractionProductReview-g49680-d14074303-Carolina_History_Haunts_Winston_Salem_Historical_Ghost_Tour-Winston_Salem_North_Car.html" target="_blank" ><img class="activity-img" src="images/ghost-tour.jpeg" alt="Ghost tour in winston salem, nc" /></a>
-        <h4 class="activity-title">Carolina History & Haunts Ghost Tour</h4>
+        <img class="activity-img" src="images/ghost-tour.jpeg" alt="Ghost tour in winston salem, nc" />
+        <a href="https://www.tripadvisor.com/AttractionProductReview-g49680-d14074303-Carolina_History_Haunts_Winston_Salem_Historical_Ghost_Tour-Winston_Salem_North_Car.html" target="_blank" ><h4 class="activity-title">Carolina History & Haunts Ghost Tour</h4></a>
         <p class="activity-text"> Hear the stories and legends behind Winston-Salem sights on this historical ghost tour—it's not too scary.</p>
       </div>
    </div>
