--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <a href="SoloProject3/index.html">Solo Project 3 - Web Agency Hero</a>
   <a href="BirthdayCard/index.html">Birthday Card</a>
   <a href="SoloProject_Hometown/index.html">HomeTown Hero Site</a>
+  <a href="Solo Project - Basketball Scoreboard/index.html">ScoreBoard</a>
+
   
 </body>
 </html>
