adding password generator project

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <a href="BirthdayCard/index.html">Birthday Card</a>
   <a href="SoloProject_Hometown/index.html">HomeTown Hero Site</a>
   <a href="Solo Project - Basketball Scoreboard/index.html">ScoreBoard</a>
+  <a href="Password Generator/index.html">Password Generator</a>
 
   
 </body>
