--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 </head>
 <body>
 
-  <a href="Personal Site/index.html">Project 1 - Personal Site</a>
-  <a href="Digital Business Card/index.html">Project 2 - Business Card</a>
-  <a href="SoloProject2/index.html">Solo Project 2 - Amazon Product Page</a>
-  <a href="SoloProject3/index.html">Solo Project 3 - Web Agency Hero</a>
+  <a href="Personal Site/index.html">Personal Site</a>
+  <a href="Digital-Business-Card/index.html">Digital Business Card</a>
+  <a href="Amazon-Landing-Page/index.html">Amazon Product Page</a>
   <a href="BirthdayCard/index.html">Birthday Card</a>
-  <a href="SoloProject_Hometown/index.html">HomeTown Hero Site</a>
-  <a href="Solo Project - Basketball Scoreboard/index.html">ScoreBoard</a>
-  <a href="Password Generator/index.html">Password Generator</a>
+  <a href="Hometown-Hero/index.html">HomeTown Hero Site</a>
+  <a href="Basketball-Scoreboard/index.html">Basketball ScoreBoard</a>
+  <a href="Password-Generator/index.html">Password Generator</a>
 
   
 </body>
