adding unit converter project

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <a href="Hometown-Hero/index.html">HomeTown Hero Site</a>
   <a href="Basketball-Scoreboard/index.html">Basketball ScoreBoard</a>
   <a href="Password-Generator/index.html">Password Generator</a>
+  <a href="unit-converter/index.html">Unit Converter</a>
 
   
 </body>
