--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <a href="Basketball-Scoreboard/index.html">Basketball ScoreBoard</a>
   <a href="Password-Generator/index.html">Password Generator</a>
   <a href="unit converter v2/index.html">Unit Converter</a>
+  <a href="unit-converter/index.html">Unit Converter v2</a>
+  <a href="shopping-list-app/index.html">Shopping List App</a>
+  <a href="we-are-the-champions/index.html">We are the Champions App</a>
 
   
 </body>
