--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Scrimba Projects</title>
-</head>
-<body>
-
-  <a href="Personal Site/index.html">Personal Site</a>
-  <a href="Digital-Business-Card/index.html">Digital Business Card</a>
-  <a href="Amazon-Landing-Page/index.html">Amazon Product Page</a>
-  <a href="BirthdayCard/index.html">Birthday Card</a>
-  <a href="Hometown-Hero/index.html">HomeTown Hero Site</a>
-  <a href="Basketball-Scoreboard/index.html">Basketball ScoreBoard</a>
-  <a href="Password-Generator/index.html">Password Generator</a>
-  <a href="unit converter v2/index.html">Unit Converter</a>
-  <a href="unit-converter/index.html">Unit Converter v2</a>
-  <a href="shopping-list-app/index.html">Shopping List App</a>
-  <a href="we-are-the-champions/index.html">We are the Champions App</a>
-
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Scrimba Projects</title>
+  </head>
+  <body>
+    <a href="Personal Site/index.html">Personal Site</a>
+    <a href="Digital-Business-Card/index.html">Digital Business Card</a>
+    <a href="Amazon-Landing-Page/index.html">Amazon Product Page</a>
+    <a href="BirthdayCard/index.html">Birthday Card</a>
+    <a href="Hometown-Hero/index.html">HomeTown Hero Site</a>
+    <a href="Basketball-Scoreboard/index.html">Basketball ScoreBoard</a>
+    <a href="Password-Generator/index.html">Password Generator</a>
+    <a href="unit converter v2/index.html">Unit Converter</a>
+    <a href="unit-converter/index.html">Unit Converter v2</a>
+    <a href="shopping-list-app/index.html">Shopping List App</a>
+    <a href="we-are-the-champions/index.html">We are the Champions App</a>
+    <a href="a-little-moody/index.html">A little moody</a>
+  </body>
 </html>
