adding oldgram to index

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <a href="shopping-list-app/index.html">Shopping List App</a>
     <a href="we-are-the-champions/index.html">We are the Champions App</a>
     <a href="a-little-moody/index.html">A little moody</a>
+    <a href="oldgram/index.html">Oldgram Instagram Clone</a>
   </body>
 </html>
