--- a/oldgram/index.html
+++ b/oldgram/index.html
@@ -8,18 +8,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <title>Solo Porject | Oldgram</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <img class="logo" src="images/logo.png" alt="Oldgram image logo" />
+        <img class="logo" src="./images/logo.png" alt="Oldgram image logo" />
         <img
           id="user-avitar"
           class="avitar"
           src="images/IanSmall.jpeg"
-          alt="user's avitar" />
+          alt="user's avitar"
+        />
       </header>
 
       <main>
