adding meme picker

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <a href="we-are-the-champions/index.html">We are the Champions App</a>
     <a href="a-little-moody/index.html">A little moody</a>
     <a href="oldgram/index.html">Oldgram Instagram Clone</a>
+    <a href="Meme Picker/index.html">Cat Meme Picker</a>
   </body>
 </html>
