adding google keep[ clone

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <a href="a-little-moody/index.html">A little moody</a>
     <a href="oldgram/index.html">Oldgram Instagram Clone</a>
     <a href="Meme Picker/index.html">Cat Meme Picker</a>
+    <a href="google-keep-clone/index.html">Google Keep Clone</a>
   </body>
 </html>
