adding date calc

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <a href="oldgram/index.html">Oldgram Instagram Clone</a>
     <a href="Meme Picker/index.html">Cat Meme Picker</a>
     <a href="google-keep-clone/index.html">Google Keep Clone</a>
+    <a href="date-calculator/">Date Calculator</a>
   </body>
 </html>
