adding results summary - front end mentor

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <a href="Meme Picker/index.html">Cat Meme Picker</a>
     <a href="google-keep-clone/index.html">Google Keep Clone</a>
     <a href="date-calculator/">Date Calculator</a>
+    <a href="ResultsSummaryComponent/">Results Summary</a>
   </body>
 </html>
