--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <a href="google-keep-clone/index.html">Google Keep Clone</a>
     <a href="date-calculator/">Date Calculator</a>
     <a href="ResultsSummaryComponent/">Results Summary</a>
+    <a href="Twimba/">Twimba - Twitter Clone</a>
   </body>
 </html>
