Adding restaurant ordering app

--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     <a href="date-calculator/">Date Calculator</a>
     <a href="ResultsSummaryComponent/">Results Summary</a>
     <a href="Twimba/">Twimba - Twitter Clone</a>
+    <a href="solo-project-restaurant-ordering-app/"
+      >Solo Project - Restaurant Ordering App</a
+    >
   </body>
 </html>
