added huddle landing page

--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
     <a href="solo-project-restaurant-ordering-app/"
       >Solo Project - Restaurant Ordering App</a
     >
+    <a href="huddle-landing-page-with-single-introductory-section-master/"
+      >Huddle Landing Page</a
+    >
   </body>
 </html>
