--- a/huddle-landing-page-with-single-introductory-section-master/index.html
+++ b/huddle-landing-page-with-single-introductory-section-master/index.html
@@ -35,13 +35,13 @@
           </p>
           <button class="register-btn" id="register-btn">Register</button>
           <div class="icons">
-            <a href="http://facebook.com" class="social-icon" target="_blank">
+            <a href="http://facebook.com" class="social-icon" target="_blank" aria-label="Facebook Link">
               <i class="fa-brands fa-facebook-f"></i>
             </a>
-            <a href="https://twitter.com" class="social-icon" target="_blank">
+            <a href="https://twitter.com" class="social-icon" target="_blank" aria-label="Twitter Link">
               <i class="fa-brands fa-twitter"></i>
             </a>
-            <a href="http://instagram.com" class="social-icon" target="_blank">
+            <a href="http://instagram.com" class="social-icon" target="_blank" aria-label="Instragram Link">
               <i class="fa-brands fa-instagram"></i>
             </a>
           </div>
