adding solo project -learning journal

--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
     <a href="huddle-landing-page-with-single-introductory-section-master/"
       >Huddle Landing Page</a
     >
+    <a href="solo-project-learning-journal/"
+      >Solo Project - Learning Journal from Figma Design</a
+    >
   </body>
 </html>
