adding bored API Project

--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <a href="solo-project-learning-journal/"
       >Solo Project - Learning Journal from Figma Design</a
     >
+    <a href="BoredBot API Project/">Bored API Practice</a>
   </body>
 </html>
