adding color generator project

--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
       >Solo Project - Learning Journal from Figma Design</a
     >
     <a href="BoredBot API Project/">Bored API Practice</a>
+    <a href="solo-project-color-generator/">Color Pallet Generator</a>
   </body>
 </html>
