adding war game

--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     >
     <a href="BoredBot API Project/">Bored API Practice</a>
     <a href="solo-project-color-generator/">Color Pallet Generator</a>
+    <a href="War-card-game-javascript/">Game of War Card Game</a>
   </body>
 </html>
