added card backs

--- a/War-card-game-javascript/index.html
+++ b/War-card-game-javascript/index.html
@@ -18,7 +18,7 @@
         <img
           id="computerCard"
           class="card"
-          src="./images/cardback.svg"
+          src="https://deckofcardsapi.com/static/img/back.png"
           alt="players card"
         />
         <h2>
@@ -31,7 +31,7 @@
         <img
           id="playerCard"
           class="card"
-          src="./images/cardback.svg"
+          src="https://deckofcardsapi.com/static/img/back.png"
           alt="players card"
         />
         <h2>My Score: <span class="score" id="playerScoreEl">0</span></h2>
