--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Scrimba Projects</title>
   </head>
   <body>
+    <a href="ScrimbaChristmasChallenge/">Scrimba Coding Challenges</a>
+
     <a href="Personal Site/index.html">Personal Site</a>
     <a href="Digital-Business-Card/index.html">Digital Business Card</a>
     <a href="Amazon-Landing-Page/index.html">Amazon Product Page</a>
