--- a/ScrimbaChristmasChallenge/01 - ChristmasCountDown/index.html
+++ b/ScrimbaChristmasChallenge/01 - ChristmasCountDown/index.html
@@ -14,7 +14,7 @@
         </script>
     </head>
     <body>
-        <h1>Countdown</h1>
+        <h1>🎄Countdown🎄</h1>
         
         <div class="container">
             <div id="countdown-display" class="countdown-display">
