adding day 2 christmas challenge

--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <a href="./01 - ChristmasCountDown/">Day 1 - Christmas Countdown</a>
+    <a href="./02 - Styled Button/">Day 2 - Hover Button Effect</a>
   </body>
 </html>
