--- a/solo-project-movie-search/index.html
+++ b/solo-project-movie-search/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Movie DB Search</title>
+    <title>Movie DB Search - Home</title>
   </head>
   <body>
     <header>
@@ -41,9 +41,9 @@
         />
         <h1>Start exploring</h1>
       </div>
-      <div class="search-results">
+      <div id="search-results-container" class="search-results">
         <!-- Start Search result card -->
-        <div class="search-result-card">
+        <!-- <div class="search-result-card">
           <div class="img-container">
             <img src="./images/avatar.jpg" alt="" />
           </div>
@@ -69,7 +69,7 @@
               </p>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- end search result card -->
       </div>
     </main>
