adding day 3 to index

--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -9,5 +9,6 @@
   <body>
     <a href="./01 - ChristmasCountDown/">Day 1 - Christmas Countdown</a>
     <a href="./02 - Styled Button/">Day 2 - Hover Button Effect</a>
+    <a href="./03 - Divide Candy/">Day 3 - Divide Candy</a>
   </body>
 </html>
