--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
     <a href="BoredBot API Project/">Bored API Practice</a>
     <a href="solo-project-color-generator/">Color Pallet Generator</a>
     <a href="War-card-game-javascript/">Game of War Card Game</a>
+    <a href="solo-project-movie-search/">Movie Database Search App</a>
   </body>
 </html>
