adding javascriptmas project

--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -10,5 +10,6 @@
     <a href="./01 - ChristmasCountDown/">Day 1 - Christmas Countdown</a>
     <a href="./02 - Styled Button/">Day 2 - Hover Button Effect</a>
     <a href="./03 - Divide Candy/">Day 3 - Divide Candy</a>
+    <a href="./04 - AI Joke Creator/">Day 4 - AI Random Joke Generator</a>
   </body>
 </html>
