--- a/ScrimbaChristmasChallenge/04 - AI Joke Creator/index.html
+++ b/ScrimbaChristmasChallenge/04 - AI Joke Creator/index.html
@@ -33,6 +33,13 @@
     <video width="100%" controls>
       <source src="./day4.mp4" type="video/mp4" />
     </video>
-    <p>Link to code: <a href="https://github.com/ianfrye0818/scrimba/tree/main/ScrimbaChristmasChallenge/04%20-%20AI%20Joke%20Creator" target="_blank">Day04 - Joke Genrator</a></p>
+    <p>
+      Link to code:
+      <a
+        href="https://github.com/ianfrye0818/scrimba/tree/main/ScrimbaChristmasChallenge/04%20-%20AI%20Joke%20Creator"
+        target="_blank"
+        >Day04 - Joke Genrator</a
+      >
+    </p>
   </body>
 </html>
