adding hacker news project

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       >Solo Project - Learning Journal from Figma Design</a
     >
     <a href="BoredBot API Project/">Bored API Practice</a>
+    <a href="hacker-news-clone/">Hacker News Clone</a>
+
     <a href="solo-project-color-generator/">Color Pallet Generator</a>
     <a href="War-card-game-javascript/">Game of War Card Game</a>
     <a href="solo-project-movie-search/">Movie Database Search App</a>
