--- a/hacker-news-clone/index.html
+++ b/hacker-news-clone/index.html
@@ -1,32 +1,43 @@
-<!DOCTYPE><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"><!DOCTYPE><html>
-      <link rel="stylesheet" href="style.css"></link>  
-    </head>
-    <body>
-       <div id="app-container">
-          <div id="app-header">
-             <header class="header">
-                <div class="flex">
-                  <span class="header-title">
-                     <img class="header-logo" src="https://icon.now.sh/ycombinator/fff"> 
-                     HackerNews
-                  </span>
-                  <a href="#/" class="header-link">Top</a>    
-                  <a href="#/new" class="header-link">New</a>
-                  <a href="#/ask" class="header-link">Ask</a>    
-                  <a href="#/show" class="header-link">Show</a>
-                  <a href="#/favorites" class="header-link">Favorites</a>        
-                </div>  
-             </header> 
-          </div> 
-       <div id="route-container">
-         <div id="router-outlet"></div>
-       </div>  
-        </div> 
-        
-        <script type="module" src="app.js"></script>
-        <script src="//unpkg.com/navigo@6"></script>
-        <!-- https://npmjs.com/package/navigo -->
-    </body>
-</html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="app-container">
+      <div id="app-header">
+        <header class="header">
+          <div class="flex">
+            <span class="header-title">
+              <i class="fa-brands fa-hacker-news header-logo"></i>
+              HackerNews
+            </span>
+            <a href="#/" class="header-link">Top</a>
+            <a href="#/new" class="header-link">New</a>
+            <a href="#/ask" class="header-link">Ask</a>
+            <a href="#/show" class="header-link">Show</a>
+            <a href="#/favorites" class="header-link">Favorites</a>
+          </div>
+        </header>
+      </div>
+      <div id="route-container">
+        <div id="router-outlet"></div>
+      </div>
+    </div>
 
-<!-- news.ycombinator.com -->
+    <script type="module" src="app.js"></script>
+    <script src="//unpkg.com/navigo@6"></script>
+    <!-- https://npmjs.com/package/navigo -->
+  </body>
+</html>
