adding jeopardy card

--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -11,5 +11,6 @@
     <a href="./02 - Styled Button/">Day 2 - Hover Button Effect</a>
     <a href="./03 - Divide Candy/">Day 3 - Divide Candy</a>
     <a href="./04 - AI Joke Creator/">Day 4 - AI Random Joke Generator</a>
+    <a href="./05 - Jeopardy Card/">Day 5 - Jeopardy Card</a>
   </body>
 </html>
