--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -12,5 +12,6 @@
     <a href="./03 - Divide Candy/">Day 3 - Divide Candy</a>
     <a href="./04 - AI Joke Creator/">Day 4 - AI Random Joke Generator</a>
     <a href="./05 - Jeopardy Card/">Day 5 - Jeopardy Card</a>
+    <a href="06 - Secret Santa/">06 - Secret Santa Shuffler</a>
   </body>
 </html>
