--- a/ScrimbaChristmasChallenge/06 - Secret Santa/index.html
+++ b/ScrimbaChristmasChallenge/06 - Secret Santa/index.html
@@ -40,12 +40,14 @@
     <main>
       <h1>Secret Santa Shuffler</h1>
       <p>
-        In today's challenge we had to come up with an algorithim to take an
-        array of people and shuffle assign each one of them another person in
-        the array for a secret santa. The person could not have themselves. I
-        also implemented a shuffle function to mimic the "shaking the names in a
-        hat" that you would expect in Secret Santa. The function will "randomly"
-        produce a new object of key/value pairs each time it's ran.
+        In today's challenge, we were tasked with creating an algorithm to
+        create a Secret Santa gift exchange. The goal was to take an array of
+        people and assign each person to another in a shuffled manner. A key
+        condition was that no one should be assigned to themselves. To replicate
+        the randomness and excitement of drawing names from a hat, I implemented
+        a shuffle function. This function simulates the process of shaking names
+        in a hat, ensuring that each time it's run, a new set of key/value pairs
+        is generated, representing the Secret Santa assignments.
       </p>
       <img
         src="./images/Screenshot 2023-12-06 at 5.39.55 AM.png"
