--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <a href="huddle-landing-page-with-single-introductory-section-master/"
       >Huddle Landing Page</a
     >
+    <a href="NewLetterSignUp/">Newsletter Sign Up Modal</a>
+
     <a href="solo-project-learning-journal/"
       >Solo Project - Learning Journal from Figma Design</a
     >
