added option for description

--- a/ScrimbaChristmasChallenge/07 - Santa Wish LIst/index.html
+++ b/ScrimbaChristmasChallenge/07 - Santa Wish LIst/index.html
@@ -43,6 +43,18 @@
       </div>
       <div class="row my-2">
         <div class="col-12 col-md-6 mx-auto">
+          <label for="wishListText" class="form-label">Description</label>
+          <textarea
+            rows="5"
+            class="form-control"
+            style="resize: none"
+            id="wishListText"
+            placeholder="Write some notes"
+          ></textarea>
+        </div>
+      </div>
+      <div class="row my-2">
+        <div class="col-12 col-md-6 mx-auto">
           <label for="wishListLink" class="form-label">Link</label>
           <input
             type="text"
