adding day 8 javascriptmas

--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -14,5 +14,6 @@
     <a href="./05 - Jeopardy Card/">Day 5 - Jeopardy Card</a>
     <a href="06 - Secret Santa/">Day 6 - Secret Santa Shuffler</a>
     <a href="07 - Santa Wish LIst/">Day 7 - Santa Wish List</a>
+    <a href="08 - Animated Progress Bar/">Day 8 - Animated Loading Bar</a>
   </body>
 </html>
