--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -15,5 +15,8 @@
     <a href="06 - Secret Santa/">Day 6 - Secret Santa Shuffler</a>
     <a href="07 - Santa Wish LIst/">Day 7 - Santa Wish List</a>
     <a href="08 - Animated Progress Bar/">Day 8 - Animated Loading Bar</a>
+    <a href="./09 - AI Generated Christmas Card/"
+      >Day 9 - -AI Generated Christmas Card</a
+    >
   </body>
 </html>
