fixing image paths

--- a/ScrimbaChristmasChallenge/09 - AI Generated Christmas Card/index.html
+++ b/ScrimbaChristmasChallenge/09 - AI Generated Christmas Card/index.html
@@ -14,7 +14,7 @@
   <body>
     <main>
       <section class="left-col" id="image-container">
-        <img src="/placeholder-image.png" />
+        <img src="./images/placeholder-image.png" />
       </section>
       <section class="right-col">
         <h1>Merry Christmas!!</h1>
@@ -31,7 +31,7 @@
               id="user-input"
             ></textarea>
             <button type="submit">
-              <img src="send.svg" class="btn-send" />
+              <img src="./images/send.svg" class="btn-send" />
             </button>
           </div>
         </form>
