--- a/ScrimbaChristmasChallenge/09 - AI Generated Christmas Card/index.html
+++ b/ScrimbaChristmasChallenge/09 - AI Generated Christmas Card/index.html
@@ -12,7 +12,7 @@
     </video>
     <p>
       Link to code:
-      <a href="" target="_blank">Day09 AI Christmas Card Genrator</a>
+      <a href="https://github.com/ianfrye0818/scrimba/tree/main/ScrimbaChristmasChallenge/09%20-%20AI%20Generated%20Christmas%20Card" target="_blank">Day09 AI Christmas Card Genrator</a>
     </p>
   </body>
 </html>
