--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -18,5 +18,6 @@
     <a href="./09 - AI Generated Christmas Card/"
       >Day 9 - AI Generated Christmas Card</a
     >
+    <a href="./10 - Rockin Around/">Day 10 - Rockin' Around</a>
   </body>
 </html>
