added ultimate christmas playlist

--- a/ScrimbaChristmasChallenge/10 - Rockin Around/index.html
+++ b/ScrimbaChristmasChallenge/10 - Rockin Around/index.html
@@ -26,6 +26,7 @@
       <h1>🎄 Christmas Jukebox</h1>
       <iframe
         id="player"
+        class="hiddenFrame"
         type="text/html"
         width="320"
         height="180"
@@ -45,9 +46,11 @@
         <button onclick="playSong('AN_R4pR1hck')">
           It's the Most Wonderful Time of the Year
         </button>
+        <button onclick="playSong('riSPpUNWdTE')">
+          The Ultimate Christmas Playlist....
+        </button>
       </div>
     </div>
-
     <script src="index.js"></script>
   </body>
 </html>
