adding solo project react business card

--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
     <a href="solo-project-color-generator/">Color Pallet Generator</a>
     <a href="War-card-game-javascript/">Game of War Card Game</a>
     <a href="solo-project-movie-search/">Movie Database Search App</a>
+    <a href="React-Projects/">React Projects....</a>
   </body>
 </html>
