Adding day 11 to javascriptmas

--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -19,5 +19,8 @@
       >Day 9 - AI Generated Christmas Card</a
     >
     <a href="./10 - Rockin Around/">Day 10 - Rockin' Around</a>
+    <a href="./Day 11 - Swiss Flag CSS Challenge/"
+      >Day 11 - Swiss Flag CSS Challenge</a
+    >
   </body>
 </html>
