adding airbnb clone project to react projects

--- a/React-Projects/index.html
+++ b/React-Projects/index.html
@@ -10,5 +10,6 @@
     <a href="./solo-project-react-business-card/"
       >Solo Project - React Business Card</a
     >
+    <a href="./air-bnb-clone/">Air BnB Landing Page Clone</a>
   </body>
 </html>
