--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -12,9 +12,9 @@
     <a href="./03 - Divide Candy/">Day 3 - Divide Candy</a>
     <a href="./04 - AI Joke Creator/">Day 4 - AI Random Joke Generator</a>
     <a href="./05 - Jeopardy Card/">Day 5 - Jeopardy Card</a>
-    <a href="06 - Secret Santa/">Day 6 - Secret Santa Shuffler</a>
-    <a href="07 - Santa Wish LIst/">Day 7 - Santa Wish List</a>
-    <a href="08 - Animated Progress Bar/">Day 8 - Animated Loading Bar</a>
+    <a href="./06 - Secret Santa/">Day 6 - Secret Santa Shuffler</a>
+    <a href="./07 - Santa Wish LIst/">Day 7 - Santa Wish List</a>
+    <a href="./08 - Animated Progress Bar/">Day 8 - Animated Loading Bar</a>
     <a href="./09 - AI Generated Christmas Card/"
       >Day 9 - AI Generated Christmas Card</a
     >
@@ -22,5 +22,6 @@
     <a href="./Day 11 - Swiss Flag CSS Challenge/"
       >Day 11 - Swiss Flag CSS Challenge</a
     >
+    <a href="./Day 12 - Santa's Gift Sorter/">Day 12 - Santa's Gift Sorter</a>
   </body>
 </html>
