--- a/React-Projects/index.html
+++ b/React-Projects/index.html
@@ -11,5 +11,8 @@
       >Solo Project - React Business Card</a
     >
     <a href="./air-bnb-clone/">Air BnB Landing Page Clone</a>
+    <a href="./solo-project-travel-journal/dist/index.html"
+      >Solo Project - Travel Journal</a
+    >
   </body>
 </html>
