fixing image path

--- a/React-Projects/index.html
+++ b/React-Projects/index.html
@@ -14,6 +14,6 @@
     <a href="solo-project-travel-journal/index.html"
       >Solo Project - Travel Journal</a
     >
-    <a href="./meme-generator/dist/index.html">Meme Generator</a>
+    <a href="./meme-generator/index.html">Meme Generator</a>
   </body>
 </html>
