Adding day 13 of javascriptmas

--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -23,5 +23,8 @@
       >Day 11 - Swiss Flag CSS Challenge</a
     >
     <a href="./Day 12 - Santa's Gift Sorter/">Day 12 - Santa's Gift Sorter</a>
+    <a href="./Day 13 - Christmas Dinner Picker/"
+      >Day 13 - Christmas Dinner Picker</a
+    >
   </body>
 </html>
