Adding Javascriptmas Day 14

--- a/ScrimbaChristmasChallenge/index.html
+++ b/ScrimbaChristmasChallenge/index.html
@@ -26,5 +26,6 @@
     <a href="./Day 13 - Christmas Dinner Picker/"
       >Day 13 - Christmas Dinner Picker</a
     >
+    <a href="./Day 14 Lonely Elf/index.html">Day 14 - Lonely Elf</a>
   </body>
 </html>
