added shopping list help

--- a/index.html
+++ b/index.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Scrimba Projects</title>
-  </head>
-  <body>
-    <a href="Personal Site/index.html">Personal Site</a>
-    <a href="Digital-Business-Card/index.html">Digital Business Card</a>
-    <a href="Amazon-Landing-Page/index.html">Amazon Product Page</a>
-    <a href="BirthdayCard/index.html">Birthday Card</a>
-    <a href="Hometown-Hero/index.html">HomeTown Hero Site</a>
-    <a href="Basketball-Scoreboard/index.html">Basketball ScoreBoard</a>
-    <a href="Password-Generator/index.html">Password Generator</a>
-    <a href="unit converter v2/index.html">Unit Converter</a>
-    <a href="unit-converter/index.html">Unit Converter v2</a>
-    <a href="shopping-list-app/index.html">Shopping List App</a>
-    <a href="we-are-the-champions/index.html">We are the Champions App</a>
-    <a href="a-little-moody/index.html">A little moody</a>
-    <a href="oldgram/index.html">Oldgram Instagram Clone</a>
-    <a href="Meme Picker/index.html">Cat Meme Picker</a>
-    <a href="google-keep-clone/index.html">Google Keep Clone</a>
-    <a href="date-calculator/">Date Calculator</a>
-    <a href="ResultsSummaryComponent/">Results Summary</a>
-    <a href="Twimba/">Twimba - Twitter Clone</a>
-    <a href="solo-project-restaurant-ordering-app/"
-      >Solo Project - Restaurant Ordering App</a
-    >
-    <a href="huddle-landing-page-with-single-introductory-section-master/"
-      >Huddle Landing Page</a
-    >
-    <a href="NewLetterSignUp/">Newsletter Sign Up Modal</a>
+   <head>
+      <meta charset="UTF-8" />
+      <meta
+         name="viewport"
+         content="width=device-width, initial-scale=1.0"
+      />
+      <link
+         rel="stylesheet"
+         href="style.css"
+      />
+      <title>Scrimba Projects</title>
+   </head>
+   <body>
+      <a href="Personal Site/index.html">Personal Site</a>
+      <a href="Digital-Business-Card/index.html">Digital Business Card</a>
+      <a href="Amazon-Landing-Page/index.html">Amazon Product Page</a>
+      <a href="BirthdayCard/index.html">Birthday Card</a>
+      <a href="Hometown-Hero/index.html">HomeTown Hero Site</a>
+      <a href="Basketball-Scoreboard/index.html">Basketball ScoreBoard</a>
+      <a href="Password-Generator/index.html">Password Generator</a>
+      <a href="unit converter v2/index.html">Unit Converter</a>
+      <a href="unit-converter/index.html">Unit Converter v2</a>
+      <a href="shopping-list-app/index.html">Shopping List App</a>
+      <a href="we-are-the-champions/index.html">We are the Champions App</a>
+      <a href="a-little-moody/index.html">A little moody</a>
+      <a href="oldgram/index.html">Oldgram Instagram Clone</a>
+      <a href="Meme Picker/index.html">Cat Meme Picker</a>
+      <a href="google-keep-clone/index.html">Google Keep Clone</a>
+      <a href="date-calculator/">Date Calculator</a>
+      <a href="ResultsSummaryComponent/">Results Summary</a>
+      <a href="Twimba/">Twimba - Twitter Clone</a>
+      <a href="solo-project-restaurant-ordering-app/">Solo Project - Restaurant Ordering App</a>
+      <a href="huddle-landing-page-with-single-introductory-section-master/">Huddle Landing Page</a>
+      <a href="NewLetterSignUp/">Newsletter Sign Up Modal</a>
 
-    <a href="solo-project-learning-journal/"
-      >Solo Project - Learning Journal from Figma Design</a
-    >
-    <a href="BoredBot API Project/">Bored API Practice</a>
-    <a href="hacker-news-clone/">Hacker News Clone</a>
+      <a href="solo-project-learning-journal/">Solo Project - Learning Journal from Figma Design</a>
+      <a href="BoredBot API Project/">Bored API Practice</a>
+      <a href="hacker-news-clone/">Hacker News Clone</a>
 
-    <a href="solo-project-color-generator/">Color Pallet Generator</a>
-    <a href="War-card-game-javascript/">Game of War Card Game</a>
-    <a href="solo-project-movie-search/">Movie Database Search App</a>
-  </body>
+      <a href="solo-project-color-generator/">Color Pallet Generator</a>
+      <a href="War-card-game-javascript/">Game of War Card Game</a>
+      <a href="solo-project-movie-search/">Movie Database Search App</a>
+      <a href="shopping-list/">Shopping List Help</a>
+   </body>
 </html>
