--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
       <a href="solo-project-color-generator/">Color Pallet Generator</a>
       <a href="War-card-game-javascript/">Game of War Card Game</a>
       <a href="solo-project-movie-search/">Movie Database Search App</a>
-      <a href="shopping-list/">Shopping List Help</a>
+      <a href="todo-list-app/">Shopping List Help</a>
    </body>
 </html>
