--- a/todo-list-app/index.html
+++ b/todo-list-app/index.html
@@ -28,7 +28,7 @@
    </head>
    <body>
       <main>
-         <h1>Shopping List</h1>
+         <h1>Todo List</h1>
          <form>
             <input
                type="text"
